# openairinterface_arm_nrue

./: .clang-format  .cproject  .gitignore  100_debug.diff  2021_04_26.diff  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  debug_rar_ok_20210513.diff  dummy  msg3_rcv.diff  msg3_rcv_0610.diff  msg4_ack_rcv_0610.diff  msg4_ok_20210514.diff  msg4_rcv_0610.diff  pucch_rcv_2021_0517.diff  rar_rcv_0610.diff  rxsigF0.m  sr_rcv_0610.diff
FecDemo/: nr_drv.ko
FecDemo/cDemo/: dataFile.c  mem.c
FecDemo/cDemo2/: FFTest  Makefile  dataFile.c  ff_define.h  main.c  nr_drv.ko.bak
FecDemo/cppDemo/: dataFile.cpp  install.sh
ci-scripts/: Jenkinsfile-gitlab  Jenkinsfile-inria-r2lab  Jenkinsfile-tmp-multi-enb-dummy  Jenkinsfile-tmp-multi-enb-nsa  Jenkinsfile-trig-nsa  astyle-options.txt  buildOnVM.sh  build_fr1_template.yaml  ci_ueinfra.yaml  cls_containerize.py  cls_log_mgt.py  cls_module_ue.py  cls_oaicitest.py  cls_physim.py  cls_rt_monitor.py  cls_static_code_analysis.py  createVM.sh  main.py  oai-ci-vm-tool  py-image.Dockerfile  ran.py  runTestOnVM.sh  stats_monitor.py  waitBuildOnVM.sh
ci-scripts/conf_files/: benetel-4g.conf  benetel-5g.conf  enb.band17.tm1.mbms.25PRB.usrpb210.conf  netsoft.conf  (+9 more)
cmake_targets/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  build_oai  ch0.m  chestF0.m  dlsch00_r0.m  dlsch00_r1.m  dlsch00_r2.m  dlsch00_r3.m  dlsch01_r0.m  dlsch01_r1.m  dlsch01_r2.m  dlsch01_r3.m  dlsch0_ch_r0_ext00.m  dlsch0_ch_r0_ext01.m  dlsch0_ch_r1_ext00.m  dlsch0_ch_r1_ext01.m  dlsch0_ch_r2_ext00.m  dlsch0_ch_r2_ext01.m  dlsch0_ch_r3_ext00.m  dlsch0_ch_r3_ext01.m  dlsch0_r0_mag1.m  dlsch0_r0_mag2.m  dlsch0_r0_rho.m  dlsch0_r0_rho2.m  dlsch0_r1_mag1.m  dlsch0_r1_mag2.m  dlsch0_r1_rho.m  dlsch0_r1_rho2.m  dlsch0_r2_mag1.m  dlsch0_r2_mag2.m  dlsch0_r2_rho.m  dlsch0_r2_rho2.m  dlsch0_r3_mag1.m  dlsch0_r3_mag2.m  dlsch0_r3_rho.m  dlsch0_r3_rho2.m  dlsch0_rxF_r0_comp0.m  dlsch0_rxF_r0_ext0.m  (+55 more)
common/: ngran_types.h  ran_context.h
doc/: FEATURE_SET.md  RUNMODEM.md  SW_archi.md  UL_MIMO.txt  memo.txt
docker/: Dockerfile.lteRU.rhel8.2  Dockerfile.lteRU.ubuntu18
executables/: main-ocp.c  nr-gnb.c  nr-ru.c  nr-softmodem-common.h  nr-softmodem.c  nr-softmodem.h  nr-ue.c  nr-uesoftmodem.c  nr-uesoftmodem.h  ocp-gnb.c  softmodem-common.c  softmodem-common.h
hs/: CMakeLists.txt  cuFFT.cu  cuFFT0.cu  cuFFT1.cu  cuFFT2.cu  cuFFT3.cu  cudaMemcpy.cu  cudaMemcpy1.cu  readme.md
minimal-ws-server/: minimal-ws-server.c  protocol_lws_minimal.c
openair2/: CMakeLists.txt
openair3/: CMakeLists.txt
openair3/NAS/: CMakeLists.txt
openair3/NAS/COMMON/: NR_NAS_defs.h
openair3/NAS/COMMON/EMM/MSG/: FGSAuthenticationRequest.c  FGSAuthenticationRequest.h  FGSIdentityRequest.c  FGSIdentityRequest.h  FGSRegistrationAccept.c  FGSRegistrationAccept.h  FGSSecurityModeCommand.c  FGSSecurityModeCommand.h  RegistrationComplete.h
openair3/NAS/COMMON/IES/: FGSMobileIdentity.c  FGSMobileIdentity.h
openair3/NAS/NR_UE/: nas_nrue_defs.h  nas_nrue_dencode.c  nas_nrue_dencode.h  nas_nrue_task.c  nas_nrue_task.h  nr_nas_msg_sim.c  nr_nas_msg_sim.h
openair3/NAS/UE/: nas_itti_messaging.c
openair3/NAS/gNB/: network_process_nas.c
test-ly/: CAJViewer 7.3.lnk  nas_algorithms.cpp  nas_algorithms.hpp  ngap_app.cpp  ngap_app.hpp  ngap_message_callback.hpp  sctp_server.cpp  sctp_server.hpp  ue_gnb.cpp  ue_gnb_2.cpp
(+13742 files in other folders)
